UI/UX misc things #85 Fixed and also fixed modal heading spacing, close icon position
UI/UX artwork page / modals #87
Fixed - Added shadow for product modal image.

UI/UX checkout pages #91
Fixed

UI/UX header navbar dropdown positioning #93
Fixed

UI/UX tags "X" icon displaying incorrectly #96
Fixed

UI/UX for "Art Match" functionality #107
Fixed - Correct and matched layout with prototype.
ArtTap quiz - I stuck on last modal so I'm unable to see other pages layout which show quiz taken.

UI/UX 404 page header [redux] #109
Fixed. - Please remove the footer from this 404 page (For now I used `display:"none"` for footer on this page).

UI/UX landing page -- weight of horizontal rules #111
Fixed

UI/UX tweaks for display cards #112
Fixed

UI/UX footer fixes #113
Fixed

UI/UX font weights & sizes for search dropdowns #114
Fixed - Improved look and matched with prototype.
Also matched checkboxes border weight, space, size.

UI/UX color balls in search result tag display #119
Fixed

--- a/src/assets/styles/flashflex/components/_block.scss
+++ b/src/assets/styles/flashflex/components/_block.scss
@@ -36,7 +36,7 @@
 	    	padding: p(21) 1rem 1rem;
 		    display: flex;
 		    justify-content: space-between;
-        	border-bottom: 1px solid $color-border;
+        	border-bottom: 1px solid $border-color;
 	    }
 
 	    address {
