--- a/src/assets/styles/flashflex/components/_curated-collections.scss
+++ b/src/assets/styles/flashflex/components/_curated-collections.scss
@@ -43,7 +43,7 @@
 	.sep-curated {
 		display: none;
 		width: 1px;
-		background-color: $color-border;
+		background-color: $border-color;
 	}
 
 	// For Mobile first approach
