--- a/src/assets/styles/flashflex/layout/_column.scss
+++ b/src/assets/styles/flashflex/layout/_column.scss
@@ -59,11 +59,11 @@
     }
     &.has-left-border {
         padding-left: 1.5rem;
-        border-left: 1px solid $color-border;
+        border-left: 1px solid $border-color;
     }
     &.has-right-border {
         padding-right: 1.5rem;
-        border-right: 1px solid $color-border;
+        border-right: 1px solid $border-color;
     }
 }
 
@@ -104,4 +104,8 @@
 }
 .flex-wrap {
     flex-wrap: wrap;
+}
+
+.flex-items-center {
+    align-items: center;
 }
